tests/diagnostics/catalog/snapshots/ir/IR0059.snap
error[IR0059]: IR_E_UNEXPECTED_TOKEN
 --> tests/diagnostics/catalog/sources/ir/IR0059.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0059
  = help: keep IR validation diagnostics structured and catalog-backed
